--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style type="text/css">
+    	.good {background-color:#00E400 ;}
+    	.moderate {background-color:#FFFF00 ;}
+    	.usg {background-color:#FF7E00 ;}
+    	.unhealthy {background-color:#FF0000 ;}
+    	.very-unhealthy {background-color:#8F3F97 ;}
+    	.hazardous {background-color:#7E0023 ;}
+    </style>
   </head>
   <body>
 
@@ -24,9 +32,10 @@
 	        <a class="nav-link" href="{% url 'about'%}">About Me</a>
 	      </li>
 	    </ul>
-	    <form class="form-inline my-2 my-lg-0">
-	      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-	      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
+	    <form class="form-inline my-2 my-lg-0" action="{%url 'home' %}" method="POST">
+	    	{%csrf_token%}
+	      <input class="form-control mr-sm-2" type="search" placeholder="Enter zipcode" aria-label="Enter zipcode" name="zipcode">
+	      <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Lookup</button>
 	    </form>
 	  </div>
 	</nav>
