--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -2,7 +2,28 @@
 
 {% block content %}
 
-<h1>Olaaaa mamacita</h1>
+<br>
+
+{% if zipcode %}
+	{{ zipcode }}
+{% endif %}
+
+{% if api %}
+	{% if api == "Error..." %}
+		There was an error, please try again...
+	{% else %}
+	<div class="jumbotron {{ category_color }}">
+	  <h1 class="display-4">{{api.0.Category.Name}}</h1>
+	  <p class="lead">{{api.0.ReportingArea}} Air Quality: {{api.0.AQI}}</p>
+	  <hr class="my-4">
+
+	  <p>{{category_description}}</p>
+
+	</div>
+
+	{% endif %}
+
+{% endif %}
 
 {% endblock %}
 	
